--- a/notebooks/preprocesing_EDA.ipynb
+++ b/notebooks/preprocesing_EDA.ipynb
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -641,13 +641,171 @@
        "(42355, 18)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_final.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "make                      0\n",
+       "model                     0\n",
+       "version                   0\n",
+       "fuel                      0\n",
+       "year                      0\n",
+       "kms                       0\n",
+       "power                     0\n",
+       "shift                     0\n",
+       "price                     0\n",
+       "location                  0\n",
+       "publish_date              0\n",
+       "dealer_address            0\n",
+       "dealer_zip_code           0\n",
+       "dealer_city               0\n",
+       "dealer_country_code       0\n",
+       "lat                    4350\n",
+       "long                   4350\n",
+       "state                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Diccionario con las coordenadas de las localidades\n",
+    "localidades_coordenadas = {     \n",
+    "    'Málaga': {'latitud': 36.7213, 'longitud': -4.4217}, 'Almería': {'latitud': 36.8381, 'longitud': -2.4587}, \n",
+    "    'Vigo': {'latitud': 42.2406, 'longitud': -8.7207}, 'Colonia Pablo Iglesias': {'latitud': 40.3703, 'longitud': -3.7361}, \n",
+    "    'Bilbao': {'latitud': 43.2630, 'longitud': -2.9340}, 'Santiago de Compostela': {'latitud': 42.8805, 'longitud': -8.5460}, \n",
+    "    'Mercado Parque Corredor del Henares': {'latitud': 40.4667, 'longitud': -3.3640}, 'Ciudad Real': {'latitud': 38.9780, 'longitud': -3.9300}, \n",
+    "    'Hidráulica Santillana': {'latitud': 43.3701, 'longitud': -4.0844}, 'Valdepeñas': {'latitud': 38.7667, 'longitud': -3.0000}, \n",
+    "    'Urbanitzacio El Medol': {'latitud': 41.1307, 'longitud': 0.8374}, 'Torredonjimeno': {'latitud': 37.8181, 'longitud': -3.6982}, \n",
+    "    'Urbanizacion La Granjilla': {'latitud': 40.3570, 'longitud': -3.7850}, 'Collado Villalba': {'latitud': 40.6365, 'longitud': -3.9862}, \n",
+    "    'Torrejón de Ardoz': {'latitud': 40.4551, 'longitud': -3.4743}, 'Barcelona': {'latitud': 41.3784, 'longitud': 2.1915}, \n",
+    "    'Gijón': {'latitud': 43.5366, 'longitud': -5.6613}, 'Polígono Industrial San Fernando': {'latitud': 37.3960, 'longitud': -5.9736}, \n",
+    "    'Coiros de Arriba': {'latitud': 43.2474, 'longitud': -8.1393}, 'Viladecans': {'latitud': 41.3254, 'longitud': 2.0221}, \n",
+    "    'Villanueva del Arzobispo': {'latitud': 38.2299, 'longitud': -3.2671}, 'Polígono Da Louzaneta': {'latitud': 42.3565, 'longitud': -8.4120}, \n",
+    "    'Balmaseda': {'latitud': 43.1460, 'longitud': -3.2530}, 'Badalona': {'latitud': 41.4507, 'longitud': 2.2462}, \n",
+    "    'San José de La Rinconada': {'latitud': 37.4346, 'longitud': -5.8710}, 'Murcia': {'latitud': 37.9836, 'longitud': -1.1280}, \n",
+    "    'Valencia': {'latitud': 39.4699, 'longitud': -0.3763}, 'Castellón de la Plana': {'latitud': 39.9864, 'longitud': -0.0561}, \n",
+    "    'Mérida': {'latitud': 38.9198, 'longitud': -6.3430}, 'Madrid': {'latitud': 40.4168, 'longitud': -3.7038}, \n",
+    "    'Torrellano': {'latitud': 38.2222, 'longitud': -0.5789}, 'Mercabilbao': {'latitud': 43.2913, 'longitud': -2.9314}, \n",
+    "    'Nava': {'latitud': 43.3503, 'longitud': -5.5043}, 'Partida Altabix': {'latitud': 38.2604, 'longitud': -0.6904}, \n",
+    "    'Sevilla': {'latitud': 37.3886, 'longitud': -5.9823}, 'Ávila': {'latitud': 40.6539, 'longitud': -4.6793}, \n",
+    "    'Armentia': {'latitud': 42.8579, 'longitud': -2.7183}, 'Torremolinos': {'latitud': 36.6202, 'longitud': -4.5014}, \n",
+    "    'Ciudad Deportiva del Jarama': {'latitud': 40.5391, 'longitud': -3.4782}, 'El Cuervo': {'latitud': 37.0384, 'longitud': -6.0889}, \n",
+    "    'Zaragoza': {'latitud': 41.6488, 'longitud': -0.8891}, 'La Nucia-Hill Nucia Hills': {'latitud': 38.6536, 'longitud': -0.1669}, \n",
+    "    'Urbanización Beltraneja': {'latitud': 40.3894, 'longitud': -3.7465}, 'Córdoba': {'latitud': 37.8882, 'longitud': -4.7794}, \n",
+    "    \"El Moli d'en Rovira\": {'latitud': 41.2886, 'longitud': 2.1628}, 'Santa Coloma de Gramenet': {'latitud': 41.2115, 'longitud': 2.2269}, \n",
+    "    'Gamarra Mayor': {'latitud': 42.4075, 'longitud': -2.4869}, 'Villena': {'latitud': 38.5507, 'longitud': -0.6200}, \n",
+    "    'Linares': {'latitud': 38.0996, 'longitud': -3.6680}, 'Mula': {'latitud': 38.0864, 'longitud': -1.4206}, \n",
+    "    'Urbanización Calipo': {'latitud': 39.4978, 'longitud': -0.4014}, 'Gamarra Menor': {'latitud': 42.3766, 'longitud': -2.4978}, \n",
+    "    'Algeciras': {'latitud': 36.1408, 'longitud': -5.4592}, 'Santa Maria del Aguila': {'latitud': 37.0533, 'longitud': -2.5644}, \n",
+    "    'Castellón': {'latitud': 39.9864, 'longitud': -0.0561}, 'Carretera Castro de Elviña': {'latitud': 43.3696, 'longitud': -8.3944}, \n",
+    "    'Polígono Industrial Madanela': {'latitud': 43.3710, 'longitud': -8.3881}, 'Vitoria-Gasteiz': {'latitud': 42.8500, 'longitud': -2.6666}, \n",
+    "    'Emisora Radio Elect Campillo': {'latitud': 38.4672, 'longitud': -1.8650}, 'Santa Perpètua de Mogoda': {'latitud': 41.4981, 'longitud': 2.2077}, \n",
+    "    'Cádiz': {'latitud': 36.5311, 'longitud': -6.2919}, 'Alicante/Alacant': {'latitud': 38.3452, 'longitud': -0.4810}, \n",
+    "    'Santafe': {'latitud': 37.5269, 'longitud': -3.6892}, 'Toledo': {'latitud': 39.8628, 'longitud': -4.0273}, \n",
+    "    'Sant Andreu de la Barca': {'latitud': 41.5142, 'longitud': 1.9440}, 'Albacete': {'latitud': 38.9949, 'longitud': -1.8585}, \n",
+    "    'Mijas': {'latitud': 36.5958, 'longitud': -4.6292}, 'Badajoz': {'latitud': 38.8795, 'longitud': -6.9703}, \n",
+    "    'Alfafar': {'latitud': 39.4510, 'longitud': -0.3833}, 'Urbanitzacio Can Valls-To': {'latitud': 41.4815, 'longitud': 2.1243}, \n",
+    "    'Urbanización Las Bizarricas': {'latitud': 38.5333, 'longitud': -0.4528}, 'Cúllar Vega': {'latitud': 37.1471, 'longitud': -3.5902}, \n",
+    "    'Mollet del Vallès': {'latitud': 41.5440, 'longitud': 2.1882}, 'El Aeroport del Prat': {'latitud': 41.2973, 'longitud': 2.0787}, \n",
+    "    'Sax': {'latitud': 38.5325, 'longitud': -0.7819}, 'Santa Pola': {'latitud': 38.1884, 'longitud': -0.5452}, \n",
+    "    'Parla': {'latitud': 40.2330, 'longitud': -3.7680}, 'Burgos': {'latitud': 42.3417, 'longitud': -3.6969}, \n",
+    "    'Alameda del Obispo': {'latitud': 37.8493, 'longitud': -4.7710}, 'Armunia': {'latitud': 42.4729, 'longitud': -5.6643}, \n",
+    "    'Carretera del Km. 17,500 Al 22,600 Madrid-Colmenar Viejo': {'latitud': 40.5566, 'longitud': -3.7054}, \n",
+    "    'Pamplona/Iruña': {'latitud': 42.8197, 'longitud': -1.6463}, 'Alcobendas': {'latitud': 40.5354, 'longitud': -3.6371}, \n",
+    "    'Marbella': {'latitud': 36.5130, 'longitud': -4.8823}, 'Orihuela': {'latitud': 38.0887, 'longitud': -0.9482}, \n",
+    "    \"L' Alcudia de Crespins\": {'latitud': 39.1232, 'longitud': -0.4607}, 'Colonia Rocafiguera': {'latitud': 41.3799, 'longitud': 2.0025}, \n",
+    "    'Plataforma Logística Plaza': {'latitud': 41.6539, 'longitud': -0.8763}, 'Fuengirola': {'latitud': 36.5397, 'longitud': -4.6243}, \n",
+    "    'Puebla de la Calzada': {'latitud': 38.9227, 'longitud': -6.1362}, 'Cañada Hermosa': {'latitud': 38.5425, 'longitud': -1.5119}, \n",
+    "    'Fuenlabrada': {'latitud': 40.2897, 'longitud': -3.7985}, 'Donostia-San Sebastián': {'latitud': 43.3183, 'longitud': -1.9812}, \n",
+    "    'Camarma de Esteruelas': {'latitud': 40.5145, 'longitud': -3.3632}, 'Saladar': {'latitud': 38.1182, 'longitud': -0.2899}, \n",
+    "    'Santander': {'latitud': 43.4623, 'longitud': -3.8099}, 'Barbastro': {'latitud': 42.0509, 'longitud': 0.1325}, \n",
+    "    'Oviedo': {'latitud': 43.3611, 'longitud': -5.8494}, 'Granollers': {'latitud': 41.6085, 'longitud': 2.2880}, \n",
+    "    'Las Vegas': {'latitud': 40.2487, 'longitud': -3.7243}, 'Huelva': {'latitud': 37.2614, 'longitud': -6.9447}, \n",
+    "    'Las Rozas de Madrid': {'latitud': 40.4722, 'longitud': -3.8707}, 'Girona': {'latitud': 41.9794, 'longitud': 2.8217}, \n",
+    "    'Palau-Solità I Plegamans': {'latitud': 41.5993, 'longitud': 2.2297}, 'Villaviciosa de Odón': {'latitud': 40.3530, 'longitud': -3.8610}, \n",
+    "    'Palma de Mallorca': {'latitud': 39.5696, 'longitud': 2.6502}, 'Tarragona': {'latitud': 41.1189, 'longitud': 1.2445}, \n",
+    "    'Ullastrell': {'latitud': 41.4932, 'longitud': 1.9159}, 'Òrrius': {'latitud': 41.6583, 'longitud': 2.3485}, \n",
+    "    'Sant Boi de Llobregat': {'latitud': 41.3305, 'longitud': 2.0332}, 'Granada': {'latitud': 37.1882, 'longitud': -3.6066}, \n",
+    "    'Terrassa': {'latitud': 41.5633, 'longitud': 2.0082}, 'La Zubia': {'latitud': 37.1350, 'longitud': -3.6505}, \n",
+    "    'Leioa': {'latitud': 43.3144, 'longitud': -2.9791}, 'Olèrdola': {'latitud': 41.2849, 'longitud': 1.7794}, \n",
+    "    'Cieza': {'latitud': 38.2444, 'longitud': -1.4417}, 'Urbi': {'latitud': 39.8320, 'longitud': -4.7962}, \n",
+    "    'Caravaca de la Cruz': {'latitud': 38.1254, 'longitud': -1.8700}, 'Polígono Industrial Parque Industrial de Elche': {'latitud': 38.2693, 'longitud': -0.7039}, \n",
+    "    'El Puerto de Santa María': {'latitud': 36.5950, 'longitud': -6.2336}, 'Residencial Can Carner': {'latitud': 41.6110, 'longitud': 1.9024}, \n",
+    "    'Estepona': {'latitud': 36.4250, 'longitud': -5.1446}, 'Los Palacios y Villafranca': {'latitud': 37.2864, 'longitud': -5.8597}, \n",
+    "    'Varea': {'latitud': 42.4576, 'longitud': -2.4925}, 'Santa Cruz Santa Cruz': {'latitud': 38.0860, 'longitud': -1.2011}, \n",
+    "    'Cogullada': {'latitud': 42.2150, 'longitud': -2.4369}, 'Ugarte': {'latitud': 42.8392, 'longitud': -2.9681}, \n",
+    "    'Sant Vicenç de Montalt': {'latitud': 41.5850, 'longitud': 2.5333}, 'Los Yébenes': {'latitud': 39.7697, 'longitud': -3.4643}, \n",
+    "    'Albatera': {'latitud': 38.2328, 'longitud': -0.8174}, \n",
+    "}\n",
+    "\n",
+    "# Rellenar los valores nulos en 'lat' y 'long' usando el diccionario\n",
+    "for localidad, coords in localidades_coordenadas.items():\n",
+    "    df_final.loc[df_final['location'] == localidad, 'lat'] = coords['latitud']\n",
+    "    df_final.loc[df_final['location'] == localidad, 'long'] = coords['longitud']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "make                     0\n",
+       "model                    0\n",
+       "version                  0\n",
+       "fuel                     0\n",
+       "year                     0\n",
+       "kms                      0\n",
+       "power                    0\n",
+       "shift                    0\n",
+       "price                    0\n",
+       "location                 0\n",
+       "publish_date             0\n",
+       "dealer_address           0\n",
+       "dealer_zip_code          0\n",
+       "dealer_city              0\n",
+       "dealer_country_code      0\n",
+       "lat                    434\n",
+       "long                   434\n",
+       "state                    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final.isnull().sum()"
    ]
   },
   {
@@ -1240,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1352,31 +1510,68 @@
        "      <td>-0.287010</td>\n",
        "      <td>3.238264</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>power_classification_num</th>\n",
+       "      <td>42349.0</td>\n",
+       "      <td>0.163499</td>\n",
+       "      <td>1.755370</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>trend</th>\n",
+       "      <td>42349.0</td>\n",
+       "      <td>19319.091265</td>\n",
+       "      <td>136.548816</td>\n",
+       "      <td>18865.074587</td>\n",
+       "      <td>19176.231318</td>\n",
+       "      <td>19409.598867</td>\n",
+       "      <td>19409.598867</td>\n",
+       "      <td>19409.598867</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   count          mean           std          min  \\\n",
-       "year             42349.0   2016.688163      3.977313  1967.000000   \n",
-       "kms              42349.0  86325.034452  55412.966297     0.000000   \n",
-       "power            42349.0    143.611632     75.887375     5.000000   \n",
-       "price            42349.0  19319.091265  16202.416180     0.000000   \n",
-       "dealer_zip_code  42349.0  24564.680748  14623.290138  1002.000000   \n",
-       "lat              37999.0     39.834810      1.963229    28.047874   \n",
-       "long             37999.0     -2.282478      3.090364   -16.622750   \n",
+       "                            count          mean           std           min  \\\n",
+       "year                      42349.0   2016.688163      3.977313   1967.000000   \n",
+       "kms                       42349.0  86325.034452  55412.966297      0.000000   \n",
+       "power                     42349.0    143.611632     75.887375      5.000000   \n",
+       "price                     42349.0  19319.091265  16202.416180      0.000000   \n",
+       "dealer_zip_code           42349.0  24564.680748  14623.290138   1002.000000   \n",
+       "lat                       37999.0     39.834810      1.963229     28.047874   \n",
+       "long                      37999.0     -2.282478      3.090364    -16.622750   \n",
+       "power_classification_num  42349.0      0.163499      1.755370     -1.000000   \n",
+       "trend                     42349.0  19319.091265    136.548816  18865.074587   \n",
        "\n",
-       "                          25%           50%            75%            max  \n",
-       "year              2015.000000   2018.000000    2019.000000    2023.000000  \n",
-       "kms              44000.000000  80748.000000  116712.000000  750000.000000  \n",
-       "power              102.000000    126.000000     150.000000     999.000000  \n",
-       "price            12089.000000  16290.000000   22500.000000  498000.000000  \n",
-       "dealer_zip_code   8734.000000  28230.000000   36211.000000   50820.000000  \n",
-       "lat                 37.992379     40.307064      41.382894      43.568866  \n",
-       "long                -3.993013     -2.886931      -0.287010       3.238264  "
+       "                                   25%           50%            75%  \\\n",
+       "year                       2015.000000   2018.000000    2019.000000   \n",
+       "kms                       44000.000000  80748.000000  116712.000000   \n",
+       "power                       102.000000    126.000000     150.000000   \n",
+       "price                     12089.000000  16290.000000   22500.000000   \n",
+       "dealer_zip_code            8734.000000  28230.000000   36211.000000   \n",
+       "lat                          37.992379     40.307064      41.382894   \n",
+       "long                         -3.993013     -2.886931      -0.287010   \n",
+       "power_classification_num     -1.000000     -1.000000       2.000000   \n",
+       "trend                     19176.231318  19409.598867   19409.598867   \n",
+       "\n",
+       "                                    max  \n",
+       "year                        2023.000000  \n",
+       "kms                       750000.000000  \n",
+       "power                        999.000000  \n",
+       "price                     498000.000000  \n",
+       "dealer_zip_code            50820.000000  \n",
+       "lat                           43.568866  \n",
+       "long                           3.238264  \n",
+       "power_classification_num       6.000000  \n",
+       "trend                      19409.598867  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
