--- a/notebooks/1.preprocesing_eda.ipynb
+++ b/notebooks/1.preprocesing_eda.ipynb
@@ -1737,7 +1737,7 @@
     "#Precio promedio segun categoria de kms. grafica\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(data=df_final, x='shift', y='price',palette='viridis')\n",
-    "plt.title('Precio promedio por categoría de kilómetros')\n",
+    "plt.title('Precio promedio según tipo de cambio')\n",
     "plt.xlabel('Categoría de kilómetros')\n",
     "plt.ylabel('Precio promedio')\n",
     "plt.show()"
