--- a/notebooks/4.model_prep.ipynb
+++ b/notebooks/4.model_prep.ipynb
@@ -937,7 +937,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model"
+    "# Model Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I made this just to have a first idea of the quality of our df, the final model was made with **AzureML**"
    ]
   },
   {
