--- a/notebooks/1.preprocesing_eda.ipynb
+++ b/notebooks/1.preprocesing_eda.ipynb
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1368,6 @@
     }
    ],
    "source": [
-    "#Generar una columna nueva diviendo los datos segun la cantidad de kms en 3 categorias\n",
     "df_final['kms_category'] = pd.cut(df_final['kms'], bins=[0, 50000, 100000, 150000, float(\"inf\")], labels=['Bajo', 'Medio', 'Alto', 'Muy Alto'])\n",
     "\n",
     "#Mostrar la cantidad de autos por cada categoria\n",
@@ -1414,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1439,6 @@
     }
    ],
    "source": [
-    "#Precio promedio segun categoria de kms.\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(data=df_final, x='kms_category', y='price',palette='viridis')\n",
     "plt.title('Precio promedio por categoría de kilómetros')\n",
@@ -1458,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1482,6 @@
     }
    ],
    "source": [
-    "#Precio promedio segun categoria de kms.\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(data=df_final, x='fuel', y='price',palette='viridis')\n",
     "plt.title('Precio promedio por categoría de kilómetros')\n",
@@ -1495,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1510,15 +1507,12 @@
     }
    ],
    "source": [
-    "# Configurar la figura y los subplots\n",
     "fig, ax = plt.subplots(1, 2, figsize=(20, 10))\n",
     "\n",
-    "# Gráfico de pastel para la proporción de cada tipo de combustible\n",
     "fuel_counts = df_final['fuel'].value_counts(normalize=True)\n",
     "ax[0].pie(fuel_counts.values, labels=fuel_counts.index, autopct='%1.1f%%', startangle=140)\n",
     "ax[0].set_title('Proporción de cada tipo de combustible')\n",
     "\n",
-    "# Boxplot para mostrar el precio por tipo de combustible sin outliers\n",
     "sns.boxplot(x='fuel', y='price', data=df_final, ax=ax[1],showfliers=False)\n",
     "ax[1].set_title('Precio por tipo de combustible (sin outliers)')\n",
     "ax[1].set_xlabel('Tipo de combustible')\n",
@@ -1538,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1558,6 @@
     }
    ],
    "source": [
-    "#Precio promedio segun categoria de kms. grafica\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(data=df_final, x='shift', y='price',palette='viridis')\n",
     "plt.title('Precio promedio según tipo de cambio')\n",
@@ -1582,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1601,14 +1594,13 @@
     }
    ],
    "source": [
-    "#Generar rangos de power y mostrar cuantos coches hay en cada rango\n",
     "df_final['power_range'] = pd.cut(df_final['power'], bins=[0, 100, 200, 300, 400, 500, float(\"inf\")], labels=['0-100', '100-200', '200-300', '300-400', '400-500', '500+'])\n",
     "print(df_final['power_range'].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1626,6 @@
     }
    ],
    "source": [
-    "#Grafico de barras de la cantidad de coches por rango de potencia\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.countplot(data=df_final, x='power_range', palette='viridis')\n",
     "plt.title('Cantidad de coches por rango de potencia')\n",
@@ -1652,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1666,6 @@
     }
    ],
    "source": [
-    "#Relacion entre year y precio \n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(data=df_final, x='year', y='price', palette='viridis')\n",
     "plt.title('Relación entre año y precio')\n",
@@ -1693,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1719,7 +1709,6 @@
     }
    ],
    "source": [
-    "#Precio promedio segun provincia\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(data=df_final, x='state', y='price',palette='viridis')\n",
     "plt.title('Precio promedio por provincia')\n",
@@ -1773,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1788,16 +1777,14 @@
     }
    ],
    "source": [
-    "# Seleccionar las variables numéricas excluyendo 'dealer_zip_code', 'lat' y 'long'\n",
     "num_vars = df_final.select_dtypes(include=['float64', 'int64']).columns.drop(['dealer_zip_code', 'lat', 'long'])\n",
     "\n",
-    "# Configurar la figura y los subplots\n",
     "n_cols = 4  # Número de columnas en la cuadrícula\n",
     "n_rows = (len(num_vars) + n_cols - 1) // n_cols  # Número de filas en la cuadrícula\n",
     "\n",
     "plt.figure(figsize=(15, n_rows * 5))  # Ajustar el tamaño de la figura\n",
     "\n",
-    "# Iterar sobre las variables numéricas\n",
+    "# Iteración sobre las variables numéricas\n",
     "for i, var in enumerate(num_vars):\n",
     "    plt.subplot(n_rows, n_cols, i + 1)  # Crear un subplot\n",
     "    sns.histplot(df_final[var], kde=True, bins=30)  # Crear histograma con KDE\n",
@@ -1850,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1873,10 +1860,8 @@
     }
    ],
    "source": [
-    "#Creamos una columna de clasificación para el kilometraje (kms)\n",
     "df_final['kms_classification'] = pd.cut(df_final['kms'], bins=[0, 10000, 20000, 30000, 40000, 50000, 60000, 70000, 80000, 90000, 100000, 110000, 120000, 130000, 140000, 150000, 160000, 170000, 180000, 190000, 200000, 210000, 220000, 230000, 240000, 250000, 260000, 270000, 280000, 290000, 300000, 310000, 320000, 330000, 340000, 350000, 360000, 370000, 380000, 390000, 400000, np.inf], labels=['0-10k', '10k-20k', '20k-30k', '30k-40k', '40k-50k', '50k-60k', '60k-70k', '70k-80k', '80k-90k', '90k-100k', '100k-110k', '110k-120k', '120k-130k', '130k-140k', '140k-150k', '150k-160k', '160k-170k', '170k-180k', '180k-190k', '190k-200k', '200k-210k', '210k-220k', '220k-230k', '230k-240k', '240k-250k', '250k-260k', '260k-270k', '270k-280k', '280k-290k', '290k-300k', '300k-310k', '310k-320k', '320k-330k', '330k-340k', '340k-350k', '350k-360k', '360k-370k', '370k-380k', '380k-390k', '390k-400k', '400k+'])\n",
     "\n",
-    "# Crear el gráfico de líneas con la media de precio\n",
     "plt.figure(figsize=(20, 10))\n",
     "mean_price_by_kms = df_final.groupby('kms_classification')['price'].mean()\n",
     "mean_price_by_kms.plot(kind='line', marker='o')\n",
@@ -1898,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1898,6 @@
     }
    ],
    "source": [
-    "# Diagrama de agrupación hexagonal de la potencia y el precio con rangos más pequeños\n",
     "ax = df_final.plot.hexbin(x='power', y='price',\n",
     "                          gridsize=50, sharex=False, figsize=(6, 4))\n",
     "ax.set_xlabel('Power')\n",
@@ -2054,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2053,6 @@
     }
    ],
    "source": [
-    "# Calcular el rango intercuartil (IQR) para latitud y longitud\n",
     "Q1_lat = df_final['lat'].quantile(0.25)\n",
     "Q3_lat = df_final['lat'].quantile(0.75)\n",
     "IQR_lat = Q3_lat - Q1_lat\n",
@@ -2078,14 +2061,12 @@
     "Q3_long = df_final['long'].quantile(0.75)\n",
     "IQR_long = Q3_long - Q1_long\n",
     "\n",
-    "# Definir los límites para detectar outliers\n",
     "lower_bound_lat = Q1_lat - 1.5 * IQR_lat\n",
     "upper_bound_lat = Q3_lat + 1.5 * IQR_lat\n",
     "\n",
     "lower_bound_long = Q1_long - 1.5 * IQR_long\n",
     "upper_bound_long = Q3_long + 1.5 * IQR_long\n",
     "\n",
-    "# Filtrar los datos para eliminar los outliers\n",
     "df_final_filtered = df_final[(df_final['lat'] >= lower_bound_lat) & (df_final['lat'] <= upper_bound_lat) &\n",
     "                             (df_final['long'] >= lower_bound_long) & (df_final['long'] <= upper_bound_long)]\n",
     "\n",
